# itemloaders

./: .bandit.yml  .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  README.rst  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml  tests-macos.yml  tests-ubuntu.yml  tests-windows.yml
docs/: Makefile  README.rst  api-reference.rst  built-in processors.rst  built-in-processors.rst  conf.py  declaring-loaders.rst  declaring-processors.rst  extending-loaders.rst  index.rst  loaders-context.rst  nested-loaders.rst  processors.rst  release-notes.rst  requirements.txt
docs/_ext/: github.py
docs/topics/: loaders.rst
itemloaders/: __init__.py  common.py  processors.py  utils.py
tests/: test_base_loader.py  test_dataclasses_loader.py  test_delayed_object_creation.py  test_loader.py  test_loader_initialization.py  test_loader_stats.py  test_nested_items.py  test_nested_loader.py  test_output_processor.py  test_processors.py  test_select_jmes.py  test_selector_loader.py  test_utils_misc.py  test_utils_python.py
